--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-discord.py>=2.3.2
-python-dotenv>=1.0.0
-Pillow>=9.2.0
-idna>=3.6
+# Core bot + web
+discord.py>=2.4,<3.0
+fastapi>=0.115,<1.0
+uvicorn[standard]>=0.30,<1.0
+
+# Images / pHash
+Pillow>=10.3,<12.0
+ImageHash>=4.3,<5.0
+numpy>=1.26,<3.0
+
+# (Opsional untuk lokal)
+# python-dotenv>=1.0,<2.0
