--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,7 @@ services:
       - key: PHISH_DB_CHANNEL_ID
         sync: false
       - key: PHISH_DB_CHANNEL_NAME
-        value: 'log-botphising'
+        value: 'nixe-only'
       - key: PHISH_DB_THREAD_NAME
         value: 'imagephising'
       - key: AUTO_CREATE_DB_THREAD
@@ -49,7 +49,7 @@ services:
       - key: LINK_AUTOBAN_ON_MATCH
         value: '0'
       - key: LINK_DB_CHANNEL_NAME
-        value: 'log-botphising'
+        value: 'nixe-only'
       - key: STRICT_HEALTH
         value: '0'
       - key: HEALTH_READY_AFTER_SECONDS
