--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ aiohttp>=3.9.5
 Pillow>=10.0.0
 ImageHash>=4.3
 google-generativeai>=0.8.0
-python-dotenv\nnumpy>=1.23\n
+python-dotenv
+numpy>=1.23
+requests
