--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 discord.py>=2.3.2
-aiohttp>=3.9.5
-Pillow>=10.0.0
-ImageHash>=4.3
-google-generativeai>=0.8.0
-python-dotenv
-numpy>=1.23
-requests
+python-dotenv>=1.0.1
+requests>=2.31.0
+Pillow>=10.4.0
+ImageHash>=4.3.1
+numpy>=1.26.0
+google-generativeai>=0.7.0
+groq>=0.9.0
+backoff>=2.2.1
